Fix the spacing on the map pin icon

--- a/www/css/less/responsive.less
+++ b/www/css/less/responsive.less
@@ -86,7 +86,7 @@
 		}
 
 		.map-pin {
-			margin-top: 4px;
+			margin-top: 3px;
 		}
 	}
 
